Post letter ideas.

--- a/mss.tex
+++ b/mss.tex
@@ -2,9 +2,9 @@
 
 \usepackage{ustj}
 
-\newcommand{\authorname}{Ernest P. Worrell}
-\newcommand{\authorpatp}{\patp{sampel-palnet}}
-\newcommand{\affiliation}{Kamp Kikakee}
+\newcommand{\authorname}{N. E. Davis}
+\newcommand{\authorpatp}{\patp{lagrev-nocfep}}
+\newcommand{\affiliation}{Urbit Foundation}
 
 %  Make first page footer:
 \fancypagestyle{firststyle}{%
@@ -21,11 +21,11 @@
 %  Arrange subsequent pages:
 \fancyhf{}
 \fancyhead[LE]{{\urbitfont Urbit Systems Technical Journal}}
-\fancyhead[RO]{Floating-Point Arithmetic on Deterministic Systems}
+\fancyhead[RO]{Letter from the Editor}
 \fancyfoot[LE,RO]{\thepage}
 
 %%MANUSCRIPT
-\title{Ernest Goes to Mars:  An Enquiry into the Foundations of Artificial Stupidity}
+\title{Letter from the Editor}
 \author{\authorname~\authorpatp \\ \affiliation}
 \date{}
 
@@ -34,83 +34,23 @@
 \maketitle
 \thispagestyle{firststyle}
 
-\begin{abstract}
-In this groundbreaking paper, we embark on a cosmic journey with the renowned character Ernest P. Worrell as he ventures into the unexplored realm of Martian computing. Drawing inspiration from Ernest's comically ingenious encounters with everyday challenges, we investigate the foundations of what we term "Artificial Stupidity." As Ernest grapples with Martian technology, we delve into the intricacies of programming errors, algorithmic missteps, and the curious phenomena that arise when human-like intelligence meets extraterrestrial computing systems. Our analysis sheds light on the unexpected intersections between humor, artificial intelligence, and the cosmic absurdity of Martian software. Join us in this interplanetary exploration as we unravel the mysteries of Artificial Stupidity through the lens of Ernest's interstellar escapades.
-\end{abstract}
-
 % We will adjust page numbering in final editing.
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
-\tableofcontents
+It never felt like the timing was right for producing and releasing a reference book or textbook:  Urbit was too hot (in the kelvin sense) and some of the prodigious work of producing a volume would have to be repeated for every system release.  There are deep and true things that can be said about the platonic Urbit, the diamond Urbit, but much of what we are working through now is the contingent Urbit, still feeling our way towards zero kelvin.  A technical journal is more forgiving in all the senses we want:  it is time-resolved; it is episodic; and it allows deep rabbit holes that would never fit in a book.  Rather than settle for the compromises of a textbook, we can instead find ways to start saying every important technical thing about Urbit and solid-state computing.
 
-\section{Introduction}
+Note “Urbit System\emph{s} Technical Journal”.  We recognize and encourage that deterministic computing, secure computing, and TODO are all larger fields than Urbit alone.
 
-Introduce the scope of your article and investigation.
+USTJ will follow a permissive dictum:  “Therefore every scribe which is instructed unto the kingdom of heaven is like unto a man that is an householder, which bringeth forth out of his treasure things new and old” (Matthew xiii 52, KJV).  In these pages you will read groundbreaking new work as well as well-considered expositions from Urbit's development.
 
-\section{Background and Literature}
+Exit the only game in town.
 
-Exposite the relevant background and literature.
+I would particularly like to thank \patp{mopfel-winrux}~for his early enthusiasm for the concept of USTJ; \patp{wolref-podlex}~for paving the 
+each contributor, reviewer, and designer
+Simon DeDeo 
+Stuart
 
-\begin{enumerate}
-  \item  Prefer to \texttt{enumerate}.
-  \item  It is easier to refer to than \texttt{itemize}.
-\end{enumerate}
+When I first encountered Urbit, it was like Mr Electrico touching twelve-year-old Ray Bradbury with a charged sword and commanding him to “live forever!”
 
-\noindent
-Mark \texttt{\textbackslash noindent} in paragraphs that continue the thought of an \texttt{\textbackslash enumerate} block.
-
-\section{Urbit's Implementation}
-
-Oftentimes you will then turn to exploring how Urbit or closely related systems like Nockchain have approached or considered a problem.
-
-\lstset{language=C}
-\begin{lstlisting}
-#include <stdio.h>
-
-double compute(float a, float b) {
-    return a * a + b * b;
-}
-
-int main() {
-    float x = 2.5;
-    float y = 3.7;
-
-    double result = compute(x, y);
-
-    printf("Result: %lf\n", result);
-
-    return 0;
-}
-\end{lstlisting}
-
-\noindent
-That code snippet was part of the text, and not a standalone entity to which we make separate repeated reference.
-
-\begin{figure}
-  \begin{lstlisting}[language=Python, caption={Example Python Code}, label={lst:example}]
-  def hello_world():
-      print("Hello, world!")
-  \end{lstlisting}
-\end{figure}
-
-Refer to the code listing: Listing~\ref{lst:example}.  (Note that we don't suppress indentation since it's a float.)
-
-
-\section{A Wild Ernest Appears}
-
-You can have as many sections as make sense.  Only sections and subsections appear in the table of contents.
-
-\section{Conclusion}
-
-To summarize, why did you write it?  Why do we care?  What impact should it have on Urbit development?
-
-Your bibliography is a separate BibTeX file.  We use the \texttt{plainnat} bibliography style.  You can use \texttt{natbib} citation commands like \texttt{\textbackslash citep\{wikipedia\}} for parenthesized references.  Use \texttt{\textbackslash citet\{wikipedia\}} for inline references.  You can also use \texttt{\textbackslash citeauthor\{wikipedia\}} for the principal author's name.
-
-``You can use traditional TeX---or LaTeX---representations'' \citep{Varney1987}.
-
-“Or you can use fancy quotes—and symbols.”
-
-\bibliographystyle{plainnat}
-\bibliography{ernest}
 \end{document}
