--- a/mss.tex
+++ b/mss.tex
@@ -12,10 +12,10 @@
 \fancyhead{}
 \fancyfoot[L]{{\footnotesize
               %% We toggle between these:
-              Manuscript submitted for review.\\
-              % {\it Urbit Systems Technical Journal} I:1 (2024):  1–3. \\
+              % Manuscript submitted for review.\\
+              {\it Urbit Systems Technical Journal} I:1 (2024):  1. \\
               ~ \\
-              Address author correspondence to \authorpatp.
+              Address editorial correspondence to \authorpatp.
               }}
 }
 %  Arrange subsequent pages:
@@ -25,32 +25,29 @@
 \fancyfoot[LE,RO]{\thepage}
 
 %%MANUSCRIPT
-\title{Letter from the Editor}
+\title{From the Editor}
 \author{\authorname~\authorpatp \\ \affiliation}
 \date{}
 
 \begin{document}
 
-\maketitle
+%\maketitle
 \thispagestyle{firststyle}
 
 % We will adjust page numbering in final editing.
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
-It never felt like the timing was right for producing and releasing a reference book or textbook:  Urbit was too hot (in the kelvin sense) and some of the prodigious work of producing a volume would have to be repeated for every system release.  There are deep and true things that can be said about the platonic Urbit, the diamond Urbit, but much of what we are working through now is the contingent Urbit, still feeling our way towards zero kelvin.  A technical journal is more forgiving in all the senses we want:  it is time-resolved; it is episodic; and it allows deep rabbit holes that would never fit in a book.  Rather than settle for the compromises of a textbook, we can instead find ways to start saying every important technical thing about Urbit and solid-state computing.
+Welcome to the inaugural issue of the \emph{Urbit Systems Technical Journal:  A Journal of Solid-State Computing}.  The core developers of Urbit from 2013 onwards have done yeoman's work in specifying and producing a novel and inventive system, one that implements and explores dozens of new concepts in computer science.  By and large, Urbit has functioned as an event horizon—when someone is convicted by the project's ambition, they are drawn in and their work becomes less visible to the broader software development community.  USTJ will change that by showcasing our travails, challenges, and triumphs.
 
-Note “Urbit System\emph{s} Technical Journal”.  We recognize and encourage that deterministic computing, secure computing, and TODO are all larger fields than Urbit alone.
+We've wanted to write about Urbit for years.  It never felt like the timing was right for the effort of producing a classical reference or textbook:  Urbit was too hot (in the kelvin sense) and some of the prodigious work of producing a volume would have to be repeated for every system release.  There are deep and true things that can be said about the platonic Urbit, the diamond Urbit, but much of what we are working through now is a contingent Urbit, feeling our way towards zero kelvin.  A technical journal is more forgiving in all the senses we want:  it is time-resolved; it is episodic; and it allows deep rabbit holes that would never fit in a book.  Rather than compromise for a textbook, we can instead find ways to start saying every important technical thing about Urbit and solid-state computing.
 
-USTJ will follow a permissive dictum:  “Therefore every scribe which is instructed unto the kingdom of heaven is like unto a man that is an householder, which bringeth forth out of his treasure things new and old” (Matthew xiii 52, KJV).  In these pages you will read groundbreaking new work as well as well-considered expositions from Urbit's development.
+USTJ will follow a permissive dictum:  “Therefore every scribe which is instructed unto the kingdom of heaven is like unto a man that is an householder, which bringeth forth out of his treasure things new and old” (Matthew \emph{xiii} 52, KJV).  In these pages you will read groundbreaking new work as well as well-considered expositions from Urbit's development.  Note as well the plural in the title.  Deterministic computing and secure computing are all larger fields than Urbit alone.
 
-Exit the only game in town.
+Many have contributed, not least the authors of the code and articles.  I would particularly like to thank \patp{mopfel-winrux} for his early enthusiasm for the concept of USTJ; \patp{wolref-podlex} for paving the way; each contributor, reviewer, and designer; and Simon DeDeo, who first suggested to us the idea of a technical journal.
 
-I would particularly like to thank \patp{mopfel-winrux}~for his early enthusiasm for the concept of USTJ; \patp{wolref-podlex}~for paving the 
-each contributor, reviewer, and designer
-Simon DeDeo 
-Stuart
-
-When I first encountered Urbit, it was like Mr Electrico touching twelve-year-old Ray Bradbury with a charged sword and commanding him to “live forever!”
-
+Computer science happens in the trenches.  \tombstone{}
 \end{document}
+
+% Issue 2:  When I first encountered Urbit, it was like Mr Electrico touching twelve-year-old Ray Bradbury with a charged sword and commanding him to “live forever!”
+% Exit the only game in town.
