Fix line breaks.

--- a/mss.tex
+++ b/mss.tex
@@ -38,11 +38,11 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
-Welcome to the inaugural issue of the \emph{Urbit Systems Technical Journal:  A Journal of Solid-State Computing}.  The core developers of Urbit from 2013 onwards have done yeoman's work in specifying and producing a novel and inventive system, one that implements and explores dozens of new concepts in computer science.  By and large, Urbit has functioned as an event horizon—when someone is convicted by the project's ambition, they are drawn in and their work becomes less visible to the broader software development community.  \textsc{ustj} will change that by showcasing our travails, challenges, and triumphs.
+Welcome to the inaugural issue of the \emph{Urbit Systems Technical Journal:  The Journal of Solid-State Computing}.  The core developers of Urbit from 2013 onwards have done yeoman's work in specifying and producing a novel and inventive system, one that implements and explores dozens of new concepts in computer science.  By and large, Urbit has functioned as an event horizon—when someone is convicted by the project's ambition, they are drawn in and their work becomes less visible to the broader software development community.  \textsc{ustj} will change that by showcasing our travails, challenges, and triumphs.
 
 We've wanted to write about Urbit for years.  It never felt like the timing was right for the effort of producing a classical reference or textbook:  Urbit was too hot (in the kelvin sense) and some of the prodigious work of producing a volume would have to be repeated for every system release.  There are deep and true things that can be said about the platonic Urbit, the diamond Urbit, but much of what we are working through now is a contingent Urbit, feeling our way towards zero kelvin.  A technical journal is more forgiving in all the senses we want:  it is time-resolved; it is episodic; and it allows deep rabbit holes that would never fit in a book.  Rather than compromise for a textbook, we can instead find ways to start saying every important technical thing about Urbit and solid-state computing.
 
-\textsc{ustj} will follow a permissive dictum:  “Therefore every scribe which is instructed unto the kingdom of heaven is like unto a man that is an householder, which bringeth forth out of his treasure things new and old” (Matthew \emph{xiii} 52).  In these pages you will read groundbreaking new work as well as well-considered expositions from Urbit's development.  Note as well the plural in the title.  Deterministic computing and secure computing are all larger fields than Urbit alone.
+\textsc{ustj} will follow a permissive dictum:  “Therefore every \linebreak scribe which is instructed unto the kingdom of heaven is like unto a man that is an householder, which bringeth forth out of his treasure things new and old” (Matthew \emph{xiii} 52).  In these pages you will read groundbreaking new work as well as well-considered expositions from Urbit's development.  Note as well the plural in the title.  Deterministic computing and secure computing are all larger fields than Urbit alone.
 
 Many have contributed, not least the authors of the code and articles.  I would particularly like to thank \patp{mopfel-winrux} for his early enthusiasm for the concept of \textsc{ustj}; \patp{wolref-podlex} for paving the way; each contributor, reviewer, and designer; and Simon DeDeo, who first suggested to us the idea of a technical journal.
 
