--- a/mss.tex
+++ b/mss.tex
@@ -13,9 +13,9 @@
 \fancyfoot[L]{{\footnotesize
               %% We toggle between these:
               % Manuscript submitted for review.\\
-              {\it Urbit Systems Technical Journal} I:1 (2024):  1. \\
-              ~ \\
-              Address editorial correspondence to \authorpatp.
+            %   {\it Urbit Systems Technical Journal} I:1 (2024):  1. \\
+            %   ~ \\
+            %   Address editorial correspondence to \authorpatp.
               }}
 }
 %  Arrange subsequent pages:
