--- a/mss.tex
+++ b/mss.tex
@@ -38,13 +38,13 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
-Welcome to the inaugural issue of the \emph{Urbit Systems Technical Journal:  The Journal of Solid-State Computing}.  The core developers of Urbit from 2013 onwards have done yeoman's work in specifying and producing a novel and inventive system, one that implements and explores dozens of new concepts in computer science.  By and large, Urbit has functioned as an event horizon—when someone is convicted by the project's ambition, they are drawn in and their work becomes less visible to the broader software development community.  \textsc{ustj} will change that by showcasing our travails, challenges, and triumphs.
+The Nock issue.  We have pondered the prospect of such an issue for some time.  These articles represent a \textit{summa computatio} in a sense, an account of decades of work in making a fundamental computational engine into a practical reality on which many people program every day.  Nock is something less than a programming \textit{language}, and something more than a bare Turing machine.  It encodes structure through its binary tree nature, and intent through its mandatory kelvin decrement system.  Perfect is the enemy of good, they say, and an agreed-upon standard better than an eternal search.  Nock sits at the nexus of an uneasy tension between minimalism and pragmatism, yet it sits with grace.
 
-We've wanted to write about Urbit for years.  It never felt like the timing was right for the effort of producing a classical reference or textbook:  Urbit was too hot (in the kelvin sense) and some of the prodigious work of producing a volume would have to be repeated for every system release.  There are deep and true things that can be said about the platonic Urbit, the diamond Urbit, but much of what we are working through now is a contingent Urbit, feeling our way towards zero kelvin.  A technical journal is more forgiving in all the senses we want:  it is time-resolved; it is episodic; and it allows deep rabbit holes that would never fit in a book.  Rather than compromise for a textbook, we can instead find ways to start saying every important technical thing about Urbit and solid-state computing.
+Some of the material in this issue is syndicated for posterity, like \patp{timluc-miptev}'s excellent Nock tutorial and Sam Atman's Ax specification.  Other parts represent the first exposition in print of major components of practical Nock evaluation, such as the history of Nock as a family of combinator calculi or Nock virtualization as a design target.  We are particularly pleased to publish the description of NockPU, the first bare-metal Nock interpreter, by \patp{mopfel-winrux}.
 
-\textsc{ustj} will follow a permissive dictum:  “Therefore every \linebreak scribe which is instructed unto the kingdom of heaven is like unto a man that is an householder, which bringeth forth out of his treasure things new and old” (Matthew \emph{xiii} 52).  In these pages you will read groundbreaking new work as well as well-considered expositions from Urbit's development.  Note as well the plural in the title.  Deterministic computing and secure computing are all larger fields than Urbit alone.
+We have also expanded our artistic portfolio.  \patp{norwyl-morlec} produced iconic ASCII art splash pages for the preceding two issues.  He returns, and we are further privileged to feature new art by longtime Urbit-associated artists \patp{litmus-ritten}, \patp{tocrex-holpen}, and \patp{natnex-ronret}.
 
-Many have contributed, not least the authors of the code and articles.  I would particularly like to thank \patp{mopfel-winrux} for his early enthusiasm for the concept of \textsc{ustj}; \patp{wolref-podlex} for paving the way; each contributor, reviewer, and designer; and Simon DeDeo, who first suggested to us the idea of a technical journal.
+Since our first volume of two editions, \emph{USTJ} has begun the process of becoming a standalone nonprofit entity tasked with preserving the technical legacy of the Nock ecosystem.  We gratefully acknowledge our supporters, not only our readers and authors but the institutions that have made \emph{USTJ} possible, namely the Urbit Foundation and West Martian Limited.
 
 Computer science happens in the trenches.  \tombstone{}
 \end{document}
