Post refs to Tibru and SKEW

--- a/mss.tex
+++ b/mss.tex
@@ -38,13 +38,13 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
-The Nock issue.  We have pondered the prospect of such an issue for some time.  These articles represent a \textit{summa computatio} in a sense, an account of decades of work in making a fundamental computational engine into a practical reality on which many people program every day.  Nock is something less than a programming \textit{language}, and something more than a bare Turing machine.  It encodes structure through its binary tree nature, and intent through its mandatory kelvin decrement system.  Perfect is the enemy of good, they say, and an agreed-upon standard better than an eternal search.  Nock sits at the nexus of an uneasy tension between minimalism and pragmatism, yet it sits with grace.
+We have pondered the prospect of a Nock issue for some time.  These articles represent a \textit{summa computralis} in a sense, an account of decades of work in making a fundamental computational engine into a practical reality on which many people program every day.  Nock is something less than a programming language, and something more than a bare Turing machine.  It encodes structure through its binary tree nature, and intent through its mandatory kelvin decrement system.  ``Perfect'' is the enemy of ``good enough'', as they say, and an agreed-upon standard better than an eternal search.  Nock sits at the nexus of an uneasy tension between minimalism and pragmatism, yet it sits with grace.
 
-Some of the material in this issue is syndicated for posterity, like \patp{timluc-miptev}'s excellent Nock tutorial and Sam Atman's Ax specification.  Other parts represent the first exposition in print of major components of practical Nock evaluation, such as the history of Nock as a family of combinator calculi or Nock virtualization as a design target.  We are particularly pleased to publish the description of NockPU, the first bare-metal Nock interpreter, by \patp{mopfel-winrux}.
+As Urbit proceeds and Nockchain grows, it is incumbent to preserve the technical and historical record of Nock computing and its intent.  Some of the material in this issue is syndicated for posterity, like \patp{timluc-miptev}'s excellent Nock tutorial and Sam Atman's description of Ax.  Other articles represent the first exposition in print of major components of practical Nock evaluation, such as the history of Nock as a family of combinator calculi or Nock virtualization as a design target.  (Besides Ax/Conk and \textsc{plan}, we note as well \href{https://github.com/tibru/tibru}{\texttt{tibru}} and \href{https://github.com/urbit/urbit/blob/skew/pkg/hs/urbit-skew/skew.md}{\textsc{skew}}, omitted from this collection.)  We are particularly pleased to publish the description of NockPU, the first bare-metal Nock interpreter, by \patp{mopfel-winrux}.
 
-We have also expanded our artistic portfolio.  \patp{norwyl-morlec} produced iconic ASCII art splash pages for the preceding two issues.  He returns, and we are further privileged to feature new art by longtime Urbit-associated artists \patp{litmus-ritten}, \patp{tocrex-holpen}, and \patp{natnex-ronret}.
+\emph{\textsc{ustj}} also expands herewith its artistic portfolio.  \patp{norwyl-morlec} produced iconic ASCII art splash pages for the preceding two issues.  He returns, and we are further privileged to feature new art by longtime Urbit-associated artists \patp{litmus-ritten}, \patp{tocrex-holpen}, and \patp{natnex-ronret}.
 
-Since our first volume of two editions, \emph{USTJ} has begun the process of becoming a standalone nonprofit entity tasked with preserving the technical legacy of the Nock ecosystem.  We gratefully acknowledge our supporters, not only our readers and authors but the institutions that have made \emph{USTJ} possible, namely the Urbit Foundation and West Martian Limited.
+Since our first volume of two editions, \emph{\textsc{ustj}} has begun the process of becoming a standalone nonprofit entity tasked with preserving the technical legacy of the Nock ecosystem.  We gratefully acknowledge our supporters, not only our readers and authors but the institutions that have made \emph{\textsc{ustj}} possible, namely the Urbit Foundation and West Martian Limited.  We particularly call out the labors of the Urbit core development team from Tlon Corporation's foundation in 2013 to the present day, and the many userspace application developers who built on shifting sands gradually settling.  This volume is dedicated to your labors.
 
 Computer science happens in the trenches.  \tombstone{}
 \end{document}
