--- a/mss.tex
+++ b/mss.tex
@@ -44,7 +44,7 @@ As Urbit proceeds and Nockchain grows, it is incumbent to preserve the technical
 
 \emph{\textsc{ustj}} also expands herewith its artistic portfolio.  \patp{norwyl-morlec} produced iconic ASCII art splash pages for the preceding two issues.  He returns, and we are further privileged to feature new art by longtime Urbit-associated artists \patp{litmus-ritten}, \patp{tocrex-holpen}, and \patp{natnex-ronret}.
 
-Since our first volume of two editions, \emph{\textsc{ustj}} has begun the process of becoming a standalone nonprofit entity tasked with preserving the technical legacy of the Nock ecosystem.  We gratefully acknowledge our supporters, not only our readers and authors but the institutions that have made \emph{\textsc{ustj}} possible, namely the Urbit Foundation and West Martian Limited.  We particularly call out the labors of the Urbit core development team from Tlon Corporation's foundation in 2013 to the present day, and the many userspace application developers who built on shifting sands gradually settling.  This volume is dedicated to your labors.
+Since our first volume of two editions, \emph{\textsc{ustj}} has begun the process of affiliating with \patp{rus} as a nonprofit entity tasked with preserving the technical legacy of the Nock ecosystem.  We gratefully acknowledge our supporters, not only our readers and authors but the institutions that have made \emph{\textsc{ustj}} possible, namely the Urbit Foundation and West Martian Limited.  We particularly call out the labors of the Urbit core development team from Tlon Corporation's foundation in 2013 to the present day, and the many userspace application developers who built on shifting sands gradually settling.  This volume is dedicated to your labors.
 
 Computer science happens in the trenches.  \tombstone{}
 \end{document}
